# vectordb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
doc/: README.md  settings.json
pgsetup/: pgcreate  pgcreatedb  pgsetvar  setconfig  start  stop
pgsetup/win/: pgall.cmd  pgcreate.cmd  pgcreatedb.cmd  pginstall.cmd  pgtest.cmd  setconfig.cmd  start.cmd  stop.cmd
plot/: Sample.R  plot_compare_algo.R  plot_hnsw_10.R  plot_lastfm_10.R  theme.r
results/: logdata.txt
src/NSW/: create_galaxies.sql  create_galaxies16.sql  hnsw_create_tables.sql
src/benchmark1/: README.md  createdata.sql  datasetdistances.pl  datasetextract.pl  datasetneighbours.pl  datasets.pl  resultsave.pl  resultwalsave.pl  sample_db.ini  step0_install.pl  step1_insert.pl  step2_only_query.pl  step2_run_benchmark.pl  step3_output.pl  step3_plot.pl  step4_benchmark_only.pl
src/benchmark1/algorithm/imgsmlr/: benchmark.pm  sample_db.ini
src/benchmark1/algorithm/lantern/: benchmark.pm  (+1 more)
src/benchmark1/modules/: distance.pm  logresult.pm  vectordata.pm
src/tests/: database.pl  databasecreate.pl  example.pl  galaxies.pl  galaxies16.pl  hdf5tobin.pl  parameters.pl  time.pl  vectors.pl
vectordata/: galaxies-3-5000-e.hdf5  galaxies-3-5000-where-equal.hdf5  galaxies-new-where-equal.hdf5  galaxies-where-10-equal.hdf5  galaxies-where-10-lessequal.hdf5  galaxies-where-10-moreequal.hdf5  galaxies-where-100-equal.hdf5  galaxies-where-100-lessequal.hdf5  galaxies-where-100-moreequal.hdf5  galaxies-where-1000-equal.hdf5  galaxies-where-1000-lessequal.hdf5  galaxies-where-1000-moreequal.hdf5
(+8 files in other folders)
